# tab_vision

./: .claude-agent-farm.json  .env.example  .gitignore  .vercelignore  AGENTS.md  AGENT_FARM_SETUP.md  AUDIT.md  CLAUDE.md  LICENSES.md  README.md  SPEC.md  Userspatridc.json  generate_test_data.py  stop-studio.ps1  studio.cmd  studio.ps1  tabvision_agent_config.json  tabvision_agent_farm_config.json  tabvision_agent_farm_prompt.txt  tabvision_prompt.txt  tabvision_specification.md  vercel.json
fretcam/: README.md  pyproject.toml
fretcam/src/fretcam/: __init__.py  __main__.py  app.py  benchmark.py  cli.py  detection.py  gaps_anchor_probe.py  position.py  replay_gaps.py  replay_position.py
fretcam/tests/: test_app.py  test_detection.py  test_gaps_anchor_probe.py  test_position.py
tabvision/: README.md  pyproject.toml
tabvision/data/: README.md
tabvision/data/eval/: composite.toml  gaps.toml  guitartechs_highres_smoke.toml  manifest.toml
tabvision/scripts/: check_default_licenses.py  test_fresh_install.sh
tabvision/scripts/acquire/: datasets.py  gaps_video.py  models.py  pdmx_extract_transitions.py  pdmx_tab_scan.py
tabvision/scripts/annotate/: README.md  __init__.py  frames.py  label_clips.py  launch.sh  storage.py
tabvision/scripts/augment/: audio.py  video.py
tabvision/scripts/eval/: a14_video_complementarity_probe.py  a15_sequence_prior_probe.py  a3_fusion_sweep.py  a3_gate_probe.py  a8_studio_degradation.py  b4_string_confidence_validation.py  build_composite_manifest.py  build_gaps_v1_prior.py  build_guitarset_seq_v1_prior.py  build_guitarset_v1_prior.py  build_pdmx_seq_v1_prior.py  build_synthtab_blend_prior.py  build_synthtab_v1_prior.py  composite_eval.py  convert_kroma_checkpoint.py  d1b_technique_baseline.py  gaps_cv_cache.py  guitarset_audio_eval.py  guitarset_highres_modal.py  n1_kroma_smoke.py  n2_muscriptor_probe.py  phase1_domain_routing.py  phase1_smoke.py  phase2_timbral_probe.py  phase5_fusion_diagnostics.py  phase5_video_diagnostics.py  run.py  s0_synthtab_audit.py  s1a_synthtab_prior_probe.py  string_assignment_oracles.py  string_assignment_phase0.py  string_assignment_phase1.py  string_assignment_phase2.py  string_assignment_phase3.py  string_assignment_phase3_benchmark.py  string_assignment_phase4.py  string_assignment_phase5.py  string_assignment_phase6.py  v1_1_audio_alignment_probe.py  v1_1_gaps_learned_probe.py  (+8 more)
tabvision/scripts/train/: _cpu_train_guitar_obb.py  audio_finetune.py  extract_string_dataset.py  hand_finetune.py  self_label.py  string_resolver_modal.py  train_string_resolver.py  yolo_guitar_obb.py  yolo_guitar_obb_modal.py
tabvision/scripts/viz/: __init__.py  overlay_fretboard.py  overlay_guitar.py  overlay_hand.py
tabvision/tabvision/: __init__.py  cli.py  config.py  diagnose.py  errors.py  pipeline.py  types.py
tabvision/tabvision/assist/: __init__.py  candidates.py  editing.py
tabvision/tabvision/audio/: __init__.py  backend.py  basicpitch.py  checkpoint_ensemble.py  ensemble_v1.json  filters.py  highres.py  highres_cache.py  highres_ensemble.py  tabcnn.py
tabvision/tabvision/demux/: __init__.py
tabvision/tabvision/eval/: __init__.py  adjacent_string_probe.py  bootstrap.py  composite.py  direct_per_string.py  error_decomposition.py  guitarset_audio.py  high_frequency_string.py  manifest.py  manifest_builder.py  metrics.py  review_queue.py  runner.py  string_assignment.py
tabvision/tabvision/fusion/: __init__.py  artifact_registry.py  candidates.py  chord.py  chord_shapes.py  context_reranker.py  evidence.py  inference_policy.py  melodic_prior.py  neck_prior.py  playability.py  position_prior.py  segment_decoder.py  transition_prior.py  vision_evidence.py  viterbi.py
tabvision/tabvision/preflight/: __init__.py  check.py  feedback.py
tabvision/tabvision/render/: __init__.py  ascii.py  gp5.py  midi.py  musicxml.py
tabvision/tabvision/video/: __init__.py
tabvision/tests/: conftest.py
tabvision/tests/eval/: __init__.py  test_phase3_eval.py  test_phase4_eval.py  test_phase5_eval.py  test_phase7_eval.py  test_phase8_smoke_eval.py
tabvision/tests/integration/: test_composite_eval_smoke.py  test_phase1_e2e.py  test_pipeline_e2e.py
tabvision/tests/unit/: test_a14_complementarity_probe.py  test_a3_fusion_sweep_backend_reuse.py  test_a3_gate_verdict.py  test_a8_studio_degradation.py  test_acquire_models.py  test_adjacent_string_probe.py  test_annotate_frames.py  test_annotate_label_clips.py  test_annotate_storage.py  test_artifact_registry.py  test_assist_candidates.py  test_assisted_editing.py  test_audio_backend_registry.py  test_audio_filters.py  test_audio_routing.py  test_bootstrap_ci.py  test_candidates.py  test_checkpoint_ensemble.py  test_chord_fusion.py  test_chord_shapes.py  test_cli_capo_validation.py  test_cli_fusion_flag.py  test_demux_frames.py  (+69 more)
(+469 files in other folders)
