[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tabvision-fretcam"
version = "0.1.0"
description = "Quarantined live webcam position-HUD prototype for TabVision"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "mediapipe>=0.10,<1",
    "numpy>=1.24,<3",
    "opencv-python>=4.8,<5",
    "ultralytics>=8.3,<9",
    "uvicorn[standard]>=0.30,<1",
    "websockets>=13,<17",
]

[project.scripts]
fretcam = "fretcam.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fretcam = ["static/*"]
