[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabvision"
description = "Guitar tab transcription from iPhone video — audio + vision fusion."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Patrick Gilhooley" }]
dynamic = ["version"]

# Phase 0 keeps runtime deps minimal — only what the type system needs.
# Each subsequent phase adds its own deps to this list as it ports modules.
# See SPEC.md §6.1 for the full model + library inventory.
dependencies = [
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Added in Phase 1 (audio baseline).
audio-baseline = [
    "basic-pitch>=0.3.0",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scipy>=1.10.0",
]
# Added in Phase 2 (audio SOTA / Riley-Edwards-and-GAPS via hf-midi-transcription).
# Not on PyPI yet; install from GitHub directly. MIT-licensed (verified
# 2026-05-05 — see LICENSES.md).
audio-highres = [
    "hf-midi-transcription @ git+https://github.com/xavriley/hf_midi_transcription.git",
    "torch>=1.9.0",
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
]
# Added in Phase 3-4 (vision).
# WARNING: ultralytics is AGPL-3.0 — installing this extras makes the
# combined TabVision distribution AGPL-tainted. See LICENSES.md and
# docs/DECISIONS.md (2026-05-05 "Phase 3 detector path").
vision = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "ultralytics>=8.3",
    "roboflow>=1.1",
]
# Added in Phase 6 (render formats other than ASCII).
render = [
    "PyGuitarPro>=0.9",
    "music21>=9.0",
    "mido>=1.3",
]
# Added in Phase 7 (training / fine-tune).
train = [
    "torch>=2.0",
    "mirdata>=0.3.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]
# Eval harness (Phase 1+).
eval = [
    "mir_eval>=0.7",
]
# Logging + config (added in Phase 1 when needed).
runtime = [
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
# Dev tooling — Phase 0 minimum.
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
tabvision = "tabvision.cli:main"

[tool.hatch.version]
path = "tabvision/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tabvision"]

# ----- Tooling -----

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["tabvision"]
# Stubs/backends will use NotImplementedError during scaffold; allow it.
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Phase 0: stub modules don't need full annotation yet.
module = ["tabvision.audio.*", "tabvision.video.*", "tabvision.fusion.*", "tabvision.render.*", "tabvision.preflight.*", "tabvision.demux.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that run the full pipeline",
    "eval: opt-in eval suite (needs full eval dataset)",
    "guitar_eval: Phase 3 guitar-detector acceptance tests",
    "preflight_eval: Phase 3 preflight-tool acceptance tests",
    "fretboard_eval: Phase 3 fretboard-rectification tests",
    "hand_eval: Phase 4 hand-tracking acceptance tests",
    "render: Phase 6 render-format tests",
]
